# battleship

./: .buildconfig  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
src/: CMakeLists.txt
src/main/: CMakeLists.txt  bootstrap.cpp  bootstrap.h  client.cpp  game.cpp  game.h  main.cpp  server.cpp  util.cpp  util.h
src/models/: BasicShip.cpp  BasicShip.h  Board.cpp  Board.h  CMakeLists.txt  Constants.h  Coordinate.cpp  Coordinate.h  Defaults.h  Game.h  Game.inl  GameBoard.cpp  GameBoard.h  HitPoint.cpp  HitPoint.h  HitResult.h  Matrix.h  Matrix.inl  Models.h  Orientation.h  Player.cpp  Player.h  PlayerBoard.cpp  PlayerBoard.h  Sea.cpp  Sea.h  Ship.cpp  Ship.h  ShipTypes.cpp  ShipTypes.h  bootstrap.cpp  bootstrap.h  bootstrap.inl  exceptions.cpp  exceptions.h
src/multiplayer/: CLIClient.cpp  CLIClient.h  CLIError.cpp  CLIError.h  CMakeLists.txt  Command.cpp  Command.h  Defaults.h  GameClient.cpp  GameClient.h  GameClient.inl  GameServer.cpp  GameServer.h  Messages.cpp  Messages.h  Messages.inl  OnlineGame.cpp  OnlineGame.h  OnlinePlayer.cpp  OnlinePlayer.h  ProtocolError.cpp  ProtocolError.h  client.cpp  defaults.h  server.cpp
src/net/: CMakeLists.txt  Client.cpp  Client.h  Defaults.h  Messages.cpp  Messages.h  Net.h  RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h  SocketError.cpp  SocketError.h  TCPIO.cpp  TCPIO.h  TCPService.cpp  TCPService.h  TCPSocket.cpp  TCPSocket.h
src/os/: boostwrap.h  os.h  sockwrap.h
src/proto/: BufferSizeMismatch.cpp  BufferSizeMismatch.h  CLIClient.cpp  CLIClient.h  CMakeLists.txt  GameClient.cpp  GameClient.h  GameServer.cpp  GameServer.h  Messages.h  NoSuchPlayer.cpp  NoSuchPlayer.h  OnlineGame.cpp  OnlineGame.h  OnlinePlayer.cpp  OnlinePlayer.h  Packets.h  Player.cpp  Player.h  ProtocolError.cpp  ProtocolError.h  exceptions.cpp  exceptions.h
src/singleplayer/: CMakeLists.txt  bootstrap.h  engine.cpp  engine.h  game.cpp  main.cpp
src/tcp/: CMakeLists.txt  Client.cpp  Client.h  Server.cpp  Server.h  Service.cpp  Service.h  SocketError.cpp  SocketError.h  TCPService.cpp  TCPService.h
src/util/: CMakeLists.txt  bootstrap.cpp  bootstrap.h  ip.cpp  ip.h  util.cpp  util.h  util.inl
